--- a/wiki/InstruccionesInstalacion.wiki
+++ b/wiki/InstruccionesInstalacion.wiki
@@ -83,22 +83,22 @@ The RPM version can be downloaded from the [http://www.swi-prolog.org/dl-stable.
 
 La instalación de MiKTeX en Windows XP es simple como la instalación de cualquier programa. Sin embargo hay que mencionar un par de cosas:
 
-The MiKTeX installation procedure on Windows XP is as easy as any other software installation procedure. However, it is necessary to make some comments:
+The MiKTeX installation procedure in Windows XP is as easy as any other software installation procedure. However, it is necessary to make some comments:
 
  * Durante la instalación, cuando aparezca la sección de "Settings", asegurarse de que la opción "Install missing packages on-the-fly" esté seteada a "Ask me first". De esta forma MiKTeX preguntará antes de instalar automáticamente algún paquete necesario. *Para el uso en FAIA no es importante esta opción*.
 
  * Luego de que el instalador de MiKTeX haya finalizado, hay que instalar un paquete que por defecto no es incluído en la instalación estándar. El nombre del paquete es "pict2e". Para esto, ir a Inicio -> Programas -> MiKTeX 2.7 -> Browse Packages. Para buscar el paquete que tenemos que instalar, colocar en el campo "Name" el valor "pict2e" (sin las comillas) y presionar el botón "Filter". Elegir del resultado el paquete con ese nombre, hacer click derecho y elegir la opción "Install". El paquete se bajará de Internet y luego será instalado. Finalmente, presionar el botón "Close" cuando la instalación haya terminado.
 
- * During the installation procedure, when the section “Settings” appears, make it sure that the option “Install missing packages on-the-fly” is set to “Ask me first”. This is necessary in order to allow MiKTeX to ask you before installing automatically any package. This option is not important for using FAIA.
+ * During the installation procedure, when the section “Settings” appears, make sure that the option “Install missing packages on-the-fly” is set to “Ask me first”. This is necessary in order to allow MiKTeX to ask you before installing any package automatically. This option is not important to use FAIA.
 
- * Once the MiKTeX installing procedure has been performed, it is necessary to install a package that is not included by default in the standard installation procedure. The name of the package is “pict2e”. In order to do this it is necessary to go to the menu Start -> Programs -> MiKTeX 2.7 -> Browse Packages. In the field “Name” input the value “pict2e” (without quotes) and press “Filter”. Choose the package with that name, right click and select the option “Install”. The package will be downloaded from the internet and then it will be installed. Finally, press “Close” when the installation procedure is completed.
+ * Once the MiKTeX installing procedure has been performed, it is necessary to install a package that is not included by default in the standard installation procedure. The name of the package is “pict2e”. In order to do this it is necessary to go to the menu Start -> Programs -> MiKTeX 2.7 -> Browse Packages. In the field “Name” input the value “pict2e” (without quotes) and press “Filter”. Choose the package with that name, right click, and select the option “Install”. The package will be downloaded from the internet and then it will be installed. Finally, press “Close” when the installation procedure is completed.
 
 
-=== En GNU/Linux (Ubuntu) // On GNU/Linux (Ubuntu) ===
+=== En GNU/Linux (Ubuntu) // In GNU/Linux (Ubuntu) ===
 
 Para instalar LaTeX en Ubuntu son necesarios los siguientes paquetes (TODO: Hay que corroborar que estos paquetes sean suficientes y necesarios):
 
-Following packages are necessary to install LaTeX in Ubuntu:
+The following packages are necessary to install LaTeX in Ubuntu:
 
  * texlive-latex-extra
  * texlive-latex-recommended
@@ -108,20 +108,20 @@ Following packages are necessary to install LaTeX in Ubuntu:
 
 Se pueden encontrar instrucciones de cómo usar FAIA en la wiki del proyecto: tanto para [http://code.google.com/p/faia/wiki/FaiaConEclipse Eclipse] como para [http://code.google.com/p/faia/wiki/FaiaConNetbeans NetBeans].
 
-Instructions to use FAIA with [http://code.google.com/p/faia/wiki/FaiaConEclipse Eclipse] and [http://code.google.com/p/faia/wiki/FaiaConNetbeans NetBeans] can be found in the project’s wiki.
+The instructions to use FAIA with [http://code.google.com/p/faia/wiki/FaiaConEclipse Eclipse] and [http://code.google.com/p/faia/wiki/FaiaConNetbeans NetBeans] can be found in the project wiki.
 
 
 = Instalar FAIA // Installing FAIA=
 
 Si bien los detalles para importar FAIA en Eclipse o !NetBans están en sus respectivas páginas wiki, aquí se dan unas breves instrucciones para armar correctamente la estructura de directorios al descomprimir los archivos de FAIA y los ejemplos:
 
-Brief instructions are given here to correctly organize the directory structure of FAIA and the examples that use FAIA. More details for importing FAIA into Eclipse and NetBeans are given in their corresponding wiki pages:
+Brief instructions are given here to correctly organize the directory structure of FAIA and the examples that use FAIA. More details to import FAIA into Eclipse and NetBeans are given in their corresponding wiki pages:
 
  # Crear una carpeta para almacenar FAIA y los ejemplos.
  # Descomprimir el contenido *exacto* de los archivos correspondientes a FAIA y a los ejemplos en esa misma carpeta. La estructura final debería ser similar a la imagen que se muestra abajo.
 
  # Create a folder to store FAIA and its examples.
- # Decompress the precise content of the files corresponding to FAIA and its examples in the folder created the previous step. The final structure should be similar to the one that is shown in the image bellow.
+ # Decompress the precise content of the files corresponding to FAIA and its examples in the folder created in the previous step. The final structure should be similar to the one that is shown in the image bellow.
 
 
 || Estructura de directorios  // Directory structure ||
