Edited wiki page through web user interface.

--- a/wiki/UtilizarBusqueda.wiki
+++ b/wiki/UtilizarBusqueda.wiki
@@ -7,7 +7,8 @@ Para comenzar a utilizar estrategias de Búsqueda simplemente se deben especiali
 Vale aclarar aquí una cuestión. Cuando se corre un proyecto que utiliza alguna estrategia de Búsqueda con FAIA, es posible indicarle al framework que genere cierto tipo de salidas sobre la corrida, para poder observar luego el funcionamiento interno del agente, esto es, el árbol de búsqueda generado. FAIA provee dos tipos de salidas:
 
  * Archivos *XML*, que se almacenan en el directorio "searchTrees" dentro de la carpeta del proyecto.
- * Archivos *PDF*, que muestran de una forma gráfica los árboles generados durante el proceso de búsqueda. Se almacenan en el directorio "pdfLatex" de la carpeta del proyecto. Esta opción utiliza LaTeX. En la página de instrucciones de instalación hay una guía para su instalación en Windows y GNU/Linux.
+ * Archivos *PDF* (esta opción está _obsoleta_, ver la siguiente opción que utiliza Graphviz), que muestran de una forma gráfica los árboles generados durante el proceso de búsqueda. Se almacenan en el directorio "pdfLatex" de la carpeta del proyecto. Esta opción utiliza LaTeX. En la página de instrucciones de instalación hay una guía para su instalación en Windows y GNU/Linux.
+ * Archivo *DOT*: esta opción es más sencilla que utilizar LaTeX para generar archivos PDF. Aquí se utiliza Graphviz para generar una representación de los árboles en el lenguaje DOT, que se almacenan en la carpeta "searchGVTrees". Luego de que se generen los archivos DOT, éstos se pueden pasar a varios formatos, como JPEG o PDF de una manera sencilla. Aunque la opción con LaTeX genera archivos PDF aptos para ser impresos.
 
 Para configurar el agente y obtener alguna de estas salidas, se puede utilizar el método _setVisibleTree_ de la clase _Search_. En el ejemplo del Pacman esta opción es seteada en el método _selectAction_ de la clase _!AgentePacman:
 
@@ -40,12 +41,44 @@ En el subárbol de la derecha, podemos observar que el nodo padre del mismo es a
 Luego podemos ver que el agente ha escogido los nodos: 5, 8, 11, 14, 17, 19, 22, etc... terminando su ejecución en el nodo 40, donde ha llegado al objetivo. Por lo tanto, la acción que va a tomar es la que indica el nodo EO = 1: Izquierda.
 
 
+== Generar archivos DOT ==
+
+Para generar archivos DOT es necesario utilizar la opción "GRAPHVIZ_TREE" en el método 'setVisibleTree' como se muestra a continuación:
+
+{{{
+searchSolver.setVisibleTree(Search.GRAPHVIZ_TREE);
+}}}
+
+Cuando se utiliza esta opcion, de una manera similar a LaTeX, se generan archivos DOT en el directorio "searchGVTrees". El paso siguiente para transformar éstos archivos en otro formato como JPEG, es utilizar el comando *dot* (o la utilidad Gvedit si se lo utiliza desde Windows). Por ejemplo, el siguiente comando en una terminal en GNU/Linux genera un archivo JPEG desde el archivo "0.dot" de un árbol de búsqueda:
+
+{{{
+$ dot -Tjpg 10.dot -o 10.jpg
+}}}
+
+El mismo se puede observar en la imagen siguiente:
+
+http://faia.googlecode.com/svn/wiki/images/busqueda/graphviz.jpg
+
+Existen mucho más formatos de salida (como PDF), además de otras opciones. Se puede leer la documentación de Graphviz.
+
+Como se dijo antes, en sistemas Windows se puede utilizar Gvedit, una vez instalado Graphviz en el sistema. Se debe abrir el archivo DOT generado y ejecutar la opción _Run_. En el diálogo que aparece se pueden elegir las opciones de salida.
+
+Si se requiere cambiar las etiquetas de los nodos en el árbol (por ejemplo, si se quiere mostrar más información), se pueden modificar los archivos de código fuente relacionados con la generación de los árboles de búsqueda en el lenguaje DOT. Este código se encuentra en las siguientes clases y métodos:
+
+ * Clase _GraphvizTree_ en el paquete _frsf.cidisi.faia.util_
+ * Método _toGraphviz()_ en la clase _NTree_ (paquete _frsf.cidisi.faia.solver.search_).
+ * Método _showTree()_ en la clase _Search_ (paquete _frsf.cidisi.faia.solver.search_)
+
+
+
+
 == Configuring a project to use Search Strategies ==
 
 To begin using simple search strategies, some classes provided by the framework must be specialized. When there is a project that uses a search strategy from FAIA, you can tell the framework to create two kind of outputs, to observe the inner functioning of the agent, such as the search tree generated. FAIA provides two types of outputs:
 
-  * * * XML files that are stored in the directory "searchTrees" within the project folder.
-  * * * PDF files, which show a graphical representation of the trees generated during the search process. They are stored in the "pdflatex" folder from the project folder. This option uses LaTeX. On the second page of instructions there is a guide for installation on Windows and GNU/Linux.
+  * XML files that are stored in the directory "searchTrees" within the project folder.
+  * PDF files (this option is _deprecated_, see the next option which uses Graphviz), which show a graphical representation of the trees generated during the search process. They are stored in the "pdflatex" folder from the project folder. This option uses LaTeX. On the second page of instructions there is a guide for installation on Windows and GNU/Linux.
+ * *DOT* files: this is a simpler option than using LaTeX to generate PDF files. Here Graphviz is used to generate a tree's representation in the DOT language, which will be stored in the "searchGVTrees" folder. After the DOT files were generated, these can be transformed to other formats, like JPEG or PDF in an easy way. Although the LaTeX option generate more suitable PDF files for printing.
 
 To configure an agent and to get some of these output, you can use the method _setVisibleTree_ in the _Search_ class. In the Pacman example, this option is set on the _selectAction_ from the _AgentePacman_class:
 
@@ -76,4 +109,33 @@ This way, in the PDF example, if you look at the top left, you will see a sub-tr
 
 In the right subtree, we can see that its parent node is the one with the same EO equal to 1. Therefore, it is the node that is generated by applying the operator goLeft to the node 0 (EO = 0). In this way it can be seen that the search strategy has chosen to expand this node in the next iteration. Observe that this time, 3 operators haven been applied: goLeft, goUp and goDown.
 
-After that, it can be seen that the agent has chosen the nodes 5, 8, 11, 14, 17, 19, 22, etc ... stopping execution on node 40, where it has reached its goal. 
+After that, it can be seen that the agent has chosen the nodes 5, 8, 11, 14, 17, 19, 22, etc ... stopping execution on node 40, where it has reached its goal.
+
+
+== Generate DOT files with Graphviz ==
+
+To generate DOT files is necessary to use the "GRAPHVIZ_TREE" option in the 'setVisibleTree' method as shown above:
+
+{{{
+searchSolver.setVisibleTree(Search.GRAPHVIZ_TREE);
+}}}
+
+When this option is used, similar to LaTeX, DOT files are generated in the "searchGVTrees" folder. The next step to transform these in other format like JPEG, is using the *dot* command (or the Gvedit utility if you are in Windows). For example, the next command in a GNU/Linux terminal generates a JPEG image from the "0.dot" file:
+
+{{{
+$ dot -Tjpg 10.dot -o 10.jpg
+}}}
+
+As can be seen in the next image:
+
+http://faia.googlecode.com/svn/wiki/images/busqueda/graphviz.jpg
+
+There are other posible output formats (like PDF), as well as other options. You can read the documentation of Graphviz.
+
+As said before, in Windows you can use Gvedit, after Graphviz is installed in the system. You can open the DOT file and execute the _Run_ command. A dialog appears where you can change the output options.
+
+If you need to change the labels of the nodes in the tree (for example, if you want to show more information), you can modify the source files related to the generation of search trees in the DOT language. This code can be found in the next classes and methods:
+
+ * _GraphvizTree_ class in _frsf.cidisi.faia.util_ package.
+ * _toGraphviz()_ method in the _NTree_ class (_frsf.cidisi.faia.solver.search_ package).
+ * _showTree()_ method in the _Search_ class (_frsf.cidisi.faia.solver.search_ package)
